2012-03-17 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/strstr.c,
	  support/regression/tests/strcpy.c,
	  support/regression/tests/strcmp.c,
	  support/regression/tests/strtok.c,
	  support/regression/tests/strncmp.c,
	  support/regression/tests/strspn.c,
	  support/regression/tests/strpbrk.c,
	  support/regression/tests/string.c:
	  merged strstr.c, strcpy.c, strcmp.c, strtok.c, strncmp.c,
	  strspn.c, and strpbrk.c to string.c, added test for
	  bug #3506236

2012-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/lkarea.c (lnksect2): applied fix from Tim Schuerewegen
	  (bug 3495316)

2012-03-16 Borut Razem <borut.razem AT gmail.com>

	* sdcc.sln, src\sdcc.vcxproj, src\sdcc.vcxproj.filters,
	  src\yacc.vcxproj:
	  project src renamed to sdcc, removed project yacc
	* doc\sdccman.lyx, src\SDCCasm.c, src\SDCCicode.h,
	  src\SDCCast.c, src\SDCCast.h, src\pic16\main.c:
	  implemeted pragma config for pic16 target, solution
	  of bug #3486890 - pic16 port config directive warning
	* src/Makefile.in, src/sdcc.vcxproj:
	  fixed bug #3506236: sdcc.exe unicode problem? by generating
	  8-bit scanner

2012-03-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/linksrc/lkarea.c (allocate_space,find_empty_space): fixed bound
	  checking errors on allocation bitmap (possbile fix for bug #3502626)

2012-03-16 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic16/libdev/pic18f1330.c:
	  add dummy SSPBUF symbol as required by __stream_putchar/printf
	* device/non-free/lib/pic16/libdev/testall.sh:
	  test using printf_tiny() for greater confidence

2012-03-14 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/sdcdb.c, src/mcs51/gen.c, src/SDCCopt.c,
	  src/hc08/gen.c, src/hc08/ralloc.c, src/ds390/gen.c,
	  src/ds390/ralloc.c, sim/ucsim/cmd.src/cmdset.cc,
	  sim/ucsim/cmd.src/cmdstat.cc, sim/ucsim/cmd.src/cmdgui.cc,
	  sim/ucsim/z80.src/inst.cci, sdas/asxxsrc/asout.c: