@@ -1,3 +1,9 @@
+2012-03-18 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/ds390/gen.c (aopGet, aopPut),
+	* src/mcs51/gen.c (aopGet, aopPut): fixed bug 3496842
+	* support/regression/tests/sfr16.c: enabled test and fixed for ds390
+
 2012-03-17 Borut Razem <borut.razem AT gmail.com>
 
 	* support/regression/tests/strstr.c,
